<resources>
    <string name="app_name">MusicApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="use_phone_number">Use Phone Number Instead</string>
    <string name="skip">Don\'t use Phone Number</string>
    <string name="resend">Resend</string>
    <string name="not_receive_otp">Didn\'t receive OTP?</string>
    <string name="use_email">Use Email Instead</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="email_address">Email Address</string>
    <string name="verification_code">Enter Verification Code</string>
    <string name="phone_number">Phone Number</string>
    <string name="next">Continue</string>
    <string name="send_email">Send Reset Email</string>
    <string name="generate">Generate OTP</string>
    <string name="verify_confirm">Verify and Confirm</string>
    <string name="enter_full_name">What\'s your name?</string>
    <string name="birthday">Birthday</string>
    <string name="full_name">Full Name</string>
    <string name="dummy">Dummy</string>
    <string name="enter_phone_number">Enter your Phone Number</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="confirm_email">Confirm your email address</string>
    <string name="sent_confirm_email">We sent a confirmation email to: </string>
    <string name="send_verification_code">We\'ll send you the 4-digit verification code</string>
    <string name="have_sent_code">Enter the OTP sent to </string>
    <string name="check_mail">Check your email and click on the confirmation link to continue</string>
    <string name="create_account">Create account</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="message">Message</string>
    <string name="dialog_cancel_message">Are you sure you want to exit singup?</string>
    <string name="dialog_message">You may lose access to the account you have begun creating.</string>
    <string name="dialog_phone_message">The phone number will not be added to your account</string>
</resources>