<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/content_padding"
    android:background="@color/colorBackground">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        style="@style/TitleTextStyle"
        android:layout_gravity="center_horizontal"/>

    <!-- EditText with Line Style -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/userNameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        style="@style/MyEditTextLineStyle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Anchor Text below Username -->
    <TextView
        android:id="@+id/credTypeChange"
        android:text="@string/use_phone_number"
        app:layout_constraintTop_toBottomOf="@id/userNameLayout"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/MyAnchorTextStyle"
        android:clickable="true"
        android:focusable="true"/>


    <!-- EditText with Border Style -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/credTypeChange"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/MyPasswordEditTextStyle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"/>


    </com.google.android.material.textfield.TextInputLayout>

    <!-- Submit Button -->
    <Button
        android:id="@+id/btSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        style="@style/MyButtonStyle"/>

    <!-- Register Text Acting as a Button -->
    <!-- Anchor Tags -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="bottom">

        <!-- Left Anchor -->
        <TextView
            android:id="@+id/btRegister"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/register"
            style="@style/MyAnchorTextStyle"
            android:gravity="start"
            android:clickable="true"
            android:focusable="true"/>

        <!-- Right Anchor -->
        <TextView
            android:id="@+id/resetPass"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/forgot_password"
            style="@style/MyAnchorTextStyle"
            android:gravity="end"
            android:clickable="true"
            android:focusable="true"/>
    </LinearLayout>

</LinearLayout>